--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,7 +70,7 @@ body {
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 /* Utility classes */
